--- a/app/src/main/res/layout/activity_edit_user.xml
+++ b/app/src/main/res/layout/activity_edit_user.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.admin.edit.EditUserFragment">
+    tools:context=".ui.admin.edit.EditUserActivity">
 
 
     <TextView
@@ -14,7 +14,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
-        android:text="@string/edit_penduduk_title"
+        android:text="@string/edit_user_title"
         android:textColor="@color/green"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -139,7 +139,7 @@
 
     <include
         android:id="@+id/content_loading"
-        layout="@layout/content_loading"
+        layout="@layout/item_loading"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
