--- a/app/src/main/res/layout/activity_kkocr.xml
+++ b/app/src/main/res/layout/activity_kkocr.xml
@@ -20,14 +20,14 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:navigationIcon="@drawable/ic_arrow_back"
-            app:title="@string/ktp_ocr_screen" />
+            app:title="@string/kk_ocr_screen" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
 
     <include
-        android:id="@+id/item_dialog_ktp_ocr"
-        layout="@layout/item_dialog_ktp_ocr"
+        android:id="@+id/item_dialog_kk_ocr"
+        layout="@layout/item_dialog_kk_ocr"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -45,11 +45,11 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:background="@color/placeholder_gray"
-        android:contentDescription="@string/preview_ktp_label"
+        android:contentDescription="@string/preview_image_kk"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_dialog_ktp_ocr"
+        app:layout_constraintTop_toBottomOf="@+id/item_dialog_kk_ocr"
         app:shapeAppearance="@style/RoundShapeImage" />
 
     <TextView
@@ -57,7 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:drawablePadding="4dp"
-        android:text="@string/preview_ktp_label"
+        android:text="@string/preview_kk_label"
         android:textColor="@color/black"
         app:drawableStartCompat="@drawable/ic_photo_library"
         app:layout_constraintBottom_toBottomOf="@+id/ivPreviewKtp"
@@ -104,7 +104,7 @@
         android:layout_marginBottom="16dp"
         android:backgroundTint="@color/green"
         android:padding="16dp"
-        android:text="@string/scan_ktp"
+        android:text="@string/scan_kk"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
