--- a/app/src/main/res/layout/content_data_lainnya.xml
+++ b/app/src/main/res/layout/content_data_lainnya.xml
@@ -71,8 +71,8 @@
             android:id="@+id/edtKeterangan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
-            android:lines="5"
+            android:gravity="top"
+            android:lines="3"
             tools:ignore="SpeakableTextPresentCheck" />
 
     </com.google.android.material.textfield.TextInputLayout>
