--- a/app/src/main/res/layout/content_pin_auth.xml
+++ b/app/src/main/res/layout/content_pin_auth.xml
@@ -7,7 +7,7 @@
     android:layout_gravity="center"
     android:layout_marginHorizontal="8dp"
     android:layout_marginVertical="4dp"
-    card_view:cardCornerRadius="13dp"
+    card_view:cardCornerRadius="20dp"
     card_view:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -22,6 +22,7 @@
             android:layout_marginTop="16dp"
             android:gravity="center"
             android:text="@string/anda_masuk_sebagai"
+            android:textColor="@color/black"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toTopOf="parent" />
@@ -43,6 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="@string/masukkan_pin"
+            android:textColor="@color/black"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toBottomOf="@id/tvRole" />
@@ -55,12 +57,15 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="32dp"
             android:background="@drawable/bg_rounded"
-            android:hint="*  *  *  *  *  *"
+            android:hint="@string/pin_hint"
+            android:inputType="numberPassword"
             android:maxLength="6"
             android:textAlignment="center"
+            android:textColor="@color/black"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/tvSubHeadline" />
+            card_view:layout_constraintTop_toBottomOf="@+id/tvSubHeadline"
+            tools:ignore="Autofill" />
 
         <Button
             android:id="@+id/btn1"
@@ -69,9 +74,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginTop="24dp"
-            android:background="@color/white"
+            android:backgroundTint="@color/white"
             android:text="@string/press_1"
-            android:textColor="@color/green"
+            android:textColor="@color/black"
             android:textSize="26sp"
             android:textStyle="bold"
             card_view:layout_constraintEnd_toStartOf="@+id/btn2"
@@ -80,12 +85,12 @@
 
         <Button
             android:id="@+id/btn2"
+            style="@style/Widget.Material3.Button.TextButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@color/white"
+            android:backgroundTint="@color/white"
             android:text="@string/press_2"
-            style="@style/Widget.Material3.Button.TextButton"
-            android:textColor="@color/green"
+            android:textColor="@color/black"
             android:textSize="26sp"
             android:textStyle="bold"
             card_view:layout_constraintBottom_toBottomOf="@+id/btn1"
@@ -95,14 +100,14 @@
 
         <Button
             android:id="@+id/btn3"
+            style="@style/Widget.Material3.Button.TextButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="32dp"
-            android:background="@color/white"
+            android:backgroundTint="@color/white"
             android:text="@string/press_3"
-            android:textColor="@color/green"
+            android:textColor="@color/black"
             android:textSize="26sp"
-            style="@style/Widget.Material3.Button.TextButton"
             android:textStyle="bold"
             card_view:layout_constraintBottom_toBottomOf="@+id/btn2"
             card_view:layout_constraintEnd_toEndOf="parent"
@@ -111,13 +116,13 @@
 
         <Button
             android:id="@+id/btn4"
+            style="@style/Widget.Material3.Button.TextButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
-            android:background="@color/white"
+            android:backgroundTint="@color/white"
             android:text="@string/press_4"
-            android:textColor="@color/green"
-            style="@style/Widget.Material3.Button.TextButton"
+            android:textColor="@color/black"
             android:textSize="26sp"
             android:textStyle="bold"
             card_view:layout_constraintEnd_toStartOf="@+id/btn5"
@@ -126,12 +131,12 @@
 
         <Button
             android:id="@+id/btn5"
+            style="@style/Widget.Material3.Button.TextButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@color/white"
+            android:backgroundTint="@color/white"
             android:text="@string/press_5"
-            style="@style/Widget.Material3.Button.TextButton"
-            android:textColor="@color/green"
+            android:textColor="@color/black"
             android:textSize="26sp"
             android:textStyle="bold"
             card_view:layout_constraintBottom_toBottomOf="@+id/btn4"
@@ -141,13 +146,13 @@
 
         <Button
             android:id="@+id/btn6"
+            style="@style/Widget.Material3.Button.TextButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="32dp"
-            android:background="@color/white"
+            android:backgroundTint="@color/white"
             android:text="@string/press_6"
-            style="@style/Widget.Material3.Button.TextButton"
-            android:textColor="@color/green"
+            android:textColor="@color/black"
             android:textSize="26sp"
             android:textStyle="bold"
             card_view:layout_constraintBottom_toBottomOf="@+id/btn5"
@@ -157,13 +162,13 @@
 
         <Button
             android:id="@+id/btn7"
+            style="@style/Widget.Material3.Button.TextButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
-            android:background="@color/white"
+            android:backgroundTint="@color/white"
             android:text="@string/press_7"
-            style="@style/Widget.Material3.Button.TextButton"
-            android:textColor="@color/green"
+            android:textColor="@color/black"
             android:textSize="26sp"
             android:textStyle="bold"
             card_view:layout_constraintEnd_toStartOf="@+id/btn8"
@@ -172,14 +177,14 @@
 
         <Button
             android:id="@+id/btn8"
+            style="@style/Widget.Material3.Button.TextButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@color/white"
+            android:backgroundTint="@color/white"
             android:text="@string/press_8"
-            android:textColor="@color/green"
+            android:textColor="@color/black"
             android:textSize="26sp"
             android:textStyle="bold"
-            style="@style/Widget.Material3.Button.TextButton"
             card_view:layout_constraintBottom_toBottomOf="@+id/btn7"
             card_view:layout_constraintEnd_toStartOf="@+id/btn9"
             card_view:layout_constraintStart_toEndOf="@+id/btn7"
@@ -187,13 +192,13 @@
 
         <Button
             android:id="@+id/btn9"
+            style="@style/Widget.Material3.Button.TextButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="32dp"
-            android:background="@color/white"
+            android:backgroundTint="@color/white"
             android:text="@string/press_9"
-            style="@style/Widget.Material3.Button.TextButton"
-            android:textColor="@color/green"
+            android:textColor="@color/black"
             android:textSize="26sp"
             android:textStyle="bold"
             card_view:layout_constraintBottom_toBottomOf="@+id/btn8"
@@ -203,13 +208,13 @@
 
         <Button
             android:id="@+id/btnClear"
+            style="@style/Widget.Material3.Button.TextButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginBottom="24dp"
-            android:background="@color/white"
+            android:backgroundTint="@color/white"
             android:text="@string/clear"
-            style="@style/Widget.Material3.Button.TextButton"
             android:textColor="@color/red"
             android:textSize="26sp"
             android:textStyle="bold"
@@ -220,14 +225,14 @@
 
         <Button
             android:id="@+id/btn0"
+            style="@style/Widget.Material3.Button.TextButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@color/white"
+            android:backgroundTint="@color/white"
             android:text="@string/press_0"
-            android:textColor="@color/green"
+            android:textColor="@color/black"
             android:textSize="26sp"
             android:textStyle="bold"
-            style="@style/Widget.Material3.Button.TextButton"
             card_view:layout_constraintBottom_toBottomOf="@+id/btnClear"
             card_view:layout_constraintEnd_toStartOf="@+id/btnOk"
             card_view:layout_constraintStart_toEndOf="@+id/btnClear"
@@ -235,13 +240,13 @@
 
         <Button
             android:id="@+id/btnOk"
+            style="@style/Widget.Material3.Button.TextButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="32dp"
-            android:background="@drawable/bg_rounded"
-            android:backgroundTint="@color/green"
+            android:backgroundTint="@color/white"
             android:text="@string/ok"
-            android:textColor="@color/white"
+            android:textColor="@color/green"
             android:textSize="26sp"
             android:textStyle="bold"
             card_view:layout_constraintBottom_toBottomOf="@+id/btn0"
