--- a/app/src/main/res/layout/item_dialog_loading.xml
+++ b/app/src/main/res/layout/item_dialog_loading.xml
@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/progressBarLayout"
+    android:id="@+id/contentLayoutProses"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:alpha="0.8"
     android:background="@color/black">
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginHorizontal="64dp"
+        android:layout_marginHorizontal="90dp"
         card_view:cardCornerRadius="13dp">
-
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:padding="24dp">
 
             <com.google.android.material.progressindicator.CircularProgressIndicator
@@ -35,17 +34,21 @@
                 android:id="@+id/tvHeadlineProgressBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="@string/memuat_data"
+                android:gravity="center"
+                android:text="@string/memproses_permintaan"
                 android:textColor="@color/green"
                 android:textSize="16sp"
                 card_view:layout_constraintEnd_toEndOf="@+id/progressBar"
                 card_view:layout_constraintStart_toStartOf="@+id/progressBar"
                 card_view:layout_constraintTop_toBottomOf="@+id/progressBar" />
 
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
