--- a/app/src/main/res/layout/item_load_camera_result.xml
+++ b/app/src/main/res/layout/item_load_camera_result.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginHorizontal="44dp"
+        android:layout_marginHorizontal="90dp"
         card_view:cardCornerRadius="13dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -37,19 +37,13 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:gravity="center"
-                android:text="@string/memproses_permintaan"
+                android:text="Memproses gambar.."
                 android:textColor="@color/green"
                 android:textSize="16sp"
                 card_view:layout_constraintEnd_toEndOf="@+id/progressBar"
                 card_view:layout_constraintStart_toStartOf="@+id/progressBar"
                 card_view:layout_constraintTop_toBottomOf="@+id/progressBar" />
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/gVertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                card_view:layout_constraintGuide_percent="0.5" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
