--- a/app/src/main/res/layout/item_penduduk.xml
+++ b/app/src/main/res/layout/item_penduduk.xml
@@ -18,13 +18,11 @@
             android:id="@+id/tvNama"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
             android:hint="@string/nama"
             android:textColor="@color/black"
             android:textStyle="bold"
-            card_view:layout_constraintEnd_toStartOf="@+id/gVertical"
+            card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toTopOf="parent"
             tools:text="MOHAMMAD NUR SYAHRIL KAHARU" />
@@ -34,38 +32,30 @@
             android:id="@+id/tvNik"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
-            android:layout_marginEnd="8dp"
             android:lines="1"
             android:textColor="@color/black"
-            card_view:layout_constraintBottom_toBottomOf="parent"
-            card_view:layout_constraintEnd_toStartOf="@+id/gVertical"
+            card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toBottomOf="@+id/tvNama"
             tools:text="@string/nik" />
 
 
-        <ImageView
-            android:id="@+id/btnEdit"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:contentDescription="@string/edit_data"
-            card_view:layout_constraintBottom_toBottomOf="parent"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintTop_toTopOf="parent"
-            card_view:srcCompat="@drawable/ic_edit" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/gVertical"
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnEditPenduduk"
+            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            card_view:layout_constraintGuide_percent="0.7" />
-
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:padding="8dp"
+            android:text="@string/edit_data_penduduk"
+            card_view:icon="@drawable/ic_chevron_right"
+            card_view:iconGravity="textEnd"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintTop_toBottomOf="@+id/tvNik"
+            card_view:shapeAppearance="@style/RoundShapeButton" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
